CREATE DATABASE IF NOT EXISTS hotel_management CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
USE hotel_management;
DROP TABLE IF EXISTS contact_messages, bookings, rooms, users, admins, realtime_events;
CREATE TABLE admins (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(100) NOT NULL, email VARCHAR(150) UNIQUE NOT NULL, password VARCHAR(255) NOT NULL, created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP);
CREATE TABLE users (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(100) NOT NULL, email VARCHAR(150) UNIQUE NOT NULL, phone VARCHAR(30), password VARCHAR(255) NOT NULL, created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP);
CREATE TABLE rooms (id INT AUTO_INCREMENT PRIMARY KEY, room_number VARCHAR(20) UNIQUE NOT NULL, type VARCHAR(80) NOT NULL, price DECIMAL(10,2) NOT NULL, capacity INT NOT NULL, max_capacity INT NOT NULL DEFAULT 3, extra_mattress_rate DECIMAL(10,2) NOT NULL DEFAULT 800.00, description TEXT NOT NULL, image VARCHAR(500), gallery JSON NULL, status ENUM('Available','Maintenance','Inactive') DEFAULT 'Available', created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP, INDEX idx_room_status(status));
CREATE TABLE bookings (id INT AUTO_INCREMENT PRIMARY KEY, booking_reference VARCHAR(30) UNIQUE NULL, user_id INT NOT NULL, room_id INT NOT NULL, guest_name VARCHAR(100) NOT NULL, guest_email VARCHAR(150) NOT NULL, guest_phone VARCHAR(30) NOT NULL, check_in DATE NOT NULL, check_in_time VARCHAR(50) DEFAULT '02:00 PM', check_out DATE NOT NULL, check_out_time VARCHAR(50) DEFAULT '11:00 AM', guests INT NOT NULL, extra_mattress INT DEFAULT 0, extra_mattress_cost DECIMAL(10,2) DEFAULT 0.00, total_amount DECIMAL(10,2) NOT NULL, payment_method VARCHAR(50) DEFAULT 'Pay on Arrival', payment_status VARCHAR(50) DEFAULT 'Pending', status ENUM('Pending','Confirmed','Cancelled','Completed') DEFAULT 'Pending', cancelled_by ENUM('Customer','Hotel') NULL, cancellation_reason VARCHAR(255) NULL, cancellation_fee DECIMAL(10,2) DEFAULT 0.00, refund_amount DECIMAL(10,2) DEFAULT 0.00, refund_status VARCHAR(255) DEFAULT 'None', created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP, CONSTRAINT fk_booking_user FOREIGN KEY(user_id) REFERENCES users(id) ON DELETE CASCADE, CONSTRAINT fk_booking_room FOREIGN KEY(room_id) REFERENCES rooms(id) ON DELETE RESTRICT, INDEX idx_booking_dates(room_id,check_in,check_out), CHECK (check_out > check_in));
CREATE TABLE contact_messages (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(100) NOT NULL, email VARCHAR(150) NOT NULL, subject VARCHAR(180) NOT NULL, message TEXT NOT NULL, created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP);
CREATE TABLE realtime_events (id INT AUTO_INCREMENT PRIMARY KEY, event_type VARCHAR(50) NOT NULL, user_id INT NULL, booking_id INT NULL, room_id INT NULL, payload JSON NOT NULL, created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, INDEX idx_id (id));
INSERT INTO admins(name,email,password) VALUES ('Hotel Administrator','admin@havenhotel.com', '$2y$10$8hx2vR9LWUoQpjBXkPhOFeIw0gie1s6oCteGqV97CpfLelNmXnJZ6');
INSERT INTO users(name,email,phone,password) VALUES ('Demo Customer','customer@example.com','9823456789', '$2y$10$8hx2vR9LWUoQpjBXkPhOFeIw0gie1s6oCteGqV97CpfLelNmXnJZ6');
INSERT INTO rooms(room_number,type,price,capacity,max_capacity,extra_mattress_rate,description,image,gallery,status) VALUES
('101','Deluxe King',6500,2,3,800.00,'A calm king room with a work desk, rainfall shower and garden-facing window.','https://images.unsplash.com/photo-1590490360182-c33d57733427?auto=format&fit=crop&w=1200&q=80','["https://images.unsplash.com/photo-1590490360182-c33d57733427?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1584622650111-993a426fbf0a?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1595526114035-0d45ed16cfbf?auto=format&fit=crop&w=1200&q=80"]','Available'),
('102','Garden Twin',5800,2,3,800.00,'Two comfortable beds, warm lighting and a peaceful garden view for friends or family.','https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=1200&q=80','["https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1552321554-5fefe8c9ef14?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1598928506311-c55ded91a20c?auto=format&fit=crop&w=1200&q=80"]','Available'),
('201','Executive Suite',9800,3,4,1000.00,'Spacious suite with a separate sitting area, premium bath amenities and city views.','https://images.unsplash.com/photo-1611892440504-42a792e24d32?auto=format&fit=crop&w=1200&q=80','["https://images.unsplash.com/photo-1611892440504-42a792e24d32?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1586023492125-27b2c045efd7?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1600565193348-f74bd3c7ccdf?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1507038772120-7ffe76f79d0d?auto=format&fit=crop&w=1200&q=80"]','Available'),
('202','Family Room',8200,4,6,800.00,'A flexible family room with extra space, sofa seating and complimentary breakfast.','https://images.unsplash.com/photo-1566665797739-1674de7a421a?auto=format&fit=crop&w=1200&q=80','["https://images.unsplash.com/photo-1566665797739-1674de7a421a?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1513694203232-719a280e022f?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1620626011761-996317b8d101?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?auto=format&fit=crop&w=1200&q=80"]','Available'),
('301','Haven Suite',12500,2,4,1200.00,'Our signature suite with a private lounge, deep soaking tub and evening turndown.','https://images.unsplash.com/photo-1578683010236-d716f9a3f461?auto=format&fit=crop&w=1200&q=80','["https://images.unsplash.com/photo-1578683010236-d716f9a3f461?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1540555700478-4be289fbecef?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1618773928121-c32242e63f39?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1584622781564-1d987f7333c1?auto=format&fit=crop&w=1200&q=80"]','Maintenance'),
('999','Penthouse Studio',18000,3,5,1500.00,'Top-floor luxury penthouse with private terrace and skyline views.','https://images.unsplash.com/photo-1591088398332-8a7791972843?auto=format&fit=crop&w=1200&q=80','["https://images.unsplash.com/photo-1591088398332-8a7791972843?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1571896349842-33c89424de2d?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1600210492486-724fe5c67fb0?auto=format&fit=crop&w=1200&q=80","https://images.unsplash.com/photo-1507652313519-d4e9174996dd?auto=format&fit=crop&w=1200&q=80"]','Available');
